--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
-django>=4.2 
-﻿bidict==0.23.1
+django>=4.2
+djangorestframework>=3.14.0
+bidict==0.23.1
 blinker==1.7.0
 certifi==2024.2.2
 cffi==1.16.0
@@ -40,6 +41,7 @@ scapy==2.6.1
 setuptools==69.2.0
 simple-websocket==1.1.0
 six==1.16.0
+sqlparse==0.5.3
 tenacity==8.2.3
 typing_extensions==4.10.0
 tzdata==2024.1
