--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,10 @@
 django>=4.2
 djangorestframework>=3.14.0
+daphne==4.0.0
+channels==4.0.0
+asgiref==3.8.1
+attrs==25.1.0
+Automat==24.8.1
 bidict==0.23.1
 blinker==1.7.0
 certifi==2024.2.2
@@ -7,6 +12,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+constantly==23.10.4
 dash==2.16.1
 dash-bootstrap-components==1.5.0
 dash-core-components==2.0.0
@@ -19,8 +25,10 @@ gevent-websocket==0.10.1
 greenlet==3.0.3
 gunicorn==23.0.0
 h11==0.14.0
+hyperlink==21.0.0
 idna==3.6
 importlib_metadata==7.1.0
+incremental==24.7.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
@@ -30,6 +38,8 @@ packaging==24.0
 pandas==2.2.1
 plotly==5.20.0
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 python-dateutil==2.9.0.post0
 python-engineio==4.10.1
@@ -43,6 +53,8 @@ simple-websocket==1.1.0
 six==1.16.0
 sqlparse==0.5.3
 tenacity==8.2.3
+Twisted==24.11.0
+txaio==23.1.1
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
